# ezfetch

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  configuration.md  troubleshooting.md
ezfetch/: __init__.py  __main__.py  cache.py  colors.py  config.py  info.py  logo.py  utils.py
scripts/: install.ps1  install.sh
