[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezfetch"
version = "1.3.0"
description = "A fast, cross-platform terminal system info tool written in Python (like neofetch)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "wtfenzo", email = "contact.now.itachi@gmail.com"},
    {name = "himonshuuu", email = "saikiahimangshu1256@gmail.com"},
]
keywords = ["neofetch", "system-info", "cli", "terminal", "fetch", "system-fetch"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "psutil"
]

[project.scripts]
ezfetch = "ezfetch.__main__:main"

[tool.setuptools]
packages = ["ezfetch"]

[tool.setuptools.package-data]
ezfetch = ["*.py"]

[project.urls]
Repository = "https://github.com/wtfenzo/ezfetch"
Issues = "https://github.com/wtfenzo/ezfetch/issues"
Documentation = "https://github.com/wtfenzo/ezfetch/tree/main/docs"
